saint-lascivious.github.io: various css fixes, amoled dark mode
sometimes standards are wrong

google breaks the no-#000 surfaces rule themselves all the time

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   resources/stylesheets/pre.css
 - modified:   resources/stylesheets/ribbons.css
 - modified:   resources/stylesheets/sainternet.css
 - modified:   resources/stylesheets/table.css
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -82,7 +82,7 @@
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="amber-ribbon"></div>
+      <div class="ribbon amber-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
