--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -83,7 +83,7 @@
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="light_green-ribbon"></div>
+      <div class="ribbon light_green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -107,32 +107,32 @@
                 <th>Protocol & Port</th>
               </tr>
               <tr>
-                <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
+                <td><a class="embiggen" href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
                 <td>dns.sainternet.xyz</td>
                 <td>TCP 443</td>
               </tr>
               <tr>
-                <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
+                <td><a class="embiggen" href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
                 <td>dns.sainternet.xyz</td>
                 <td>UDP 443</td>
               </tr>
               <tr>
-                <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
+                <td><a class="embiggen" href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
                 <td>119.224.127.171<br><b>::ffff:119.224.127.171</b><br>::ffff:77e0:7fab</td>
                 <td>TCP 53</td>
               </tr>
               <tr>
-                <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
+                <td><a class="embiggen" href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
                 <td>dns.sainternet.xyz</td>
                 <td>TCP 853</td>
               </tr>
               <tr>
-                <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
+                <td><a class="embiggen" href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
                 <td>119.224.127.171<br><b>::ffff:119.224.127.171</b><br>::ffff:77e0:7fab</td>
                 <td>UDP 53</td>
               </tr>
               <tr>
-                <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
+                <td><a class="embiggen" href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
                 <td>dns.sainternet.xyz</td>
                 <td>UDP 784<br><b>UDP 853</b><br>UDP 8853</td>
               </tr>
