--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
           <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
         </nav>
       </div>
-      <div class="purple-ribbon"></div>
+      <div class="ribbon purple-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
