--- a/265.html
+++ b/265.html
@@ -84,7 +84,7 @@
           <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>???</b></a>
         </nav>
       </div>
-      <div class="pink-ribbon"></div>
+      <div class="ribbon pink-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
