--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
           <a class="embiggen mdl-navigation__link" href="#pokemon404"><b>???</b></a>
         </nav>
       </div>
-      <div class="light_blue-ribbon"></div>
+      <div class="ribbon light_blue-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
