--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="red-ribbon"></div>
+      <div class="ribbon red-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid" id="welcome">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
