--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -86,7 +86,7 @@
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="indigo-ribbon"></div>
+      <div class="ribbon indigo-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
