--- a/technologies.html
+++ b/technologies.html
@@ -78,6 +78,7 @@
           <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="#technologies"> <b>- Technologies</b></a>
           <a class="embiggen mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="/reportaproblem.html"> - Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
