--- a/testsainternet.html
+++ b/testsainternet.html
@@ -79,6 +79,7 @@
           <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="embiggen mdl-navigation__link" href="#testsainternet"> <b>- Test Sainternet</b></a>
+          <a class="embiggen mdl-navigation__link" href="/reportaproblem.html"> - Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
