--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -79,6 +79,7 @@
           <a class="embiggen mdl-navigation__link" href="#portsandprotocols"> <b>- Ports and Protocols</b></a>
           <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="embiggen mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="/reportaproblem.html"> - Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
