saint-lascivious.github.io: FAQs -> FAQ, css fixes/simplification
Changes to be committed:
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   portsandprotocols.html
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/sainternet.css
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -73,7 +73,7 @@
           <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="#frequentlyaskedquestions"> <b>- FAQs</b></a>
+          <a class="embiggen mdl-navigation__link" href="#frequentlyaskedquestions"> <b>- FAQ</b></a>
           <a class="embiggen mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
