--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -74,7 +74,7 @@
           <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
+          <a class="embiggen mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQ</a>
           <a class="embiggen mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="#portsandprotocols"> <b>- Ports and Protocols</b></a>
           <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
