--- a/technologies.html
+++ b/technologies.html
@@ -73,7 +73,7 @@
           <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
+          <a class="embiggen mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQ</a>
           <a class="embiggen mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
           <a class="embiggen mdl-navigation__link" href="#technologies"> <b>- Technologies</b></a>
