saint-lascivious.github.io: random assorted changes/fixes
Changes to be committed:
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/sainternet.css

--- a/reportaproblem.html
+++ b/reportaproblem.html
@@ -110,7 +110,7 @@
               Found a bug on <b>sainternet.xyz</b>?
             </p>
             <p>
-              Create a <a class="embiggen" href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=bug&template=BUG_REPORT.md&title=sainternet.xyz%3A+bug+report">Bug Report</a> to help <b>sainternet.xyz</b> improve.
+              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=bug&template=BUG_REPORT.md&title=sainternet.xyz%3A+bug+report">Bug Report</a> to help <b>sainternet.xyz</b> improve.
             </p>
            </div>
         </div>
@@ -119,10 +119,10 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Blacklist Proposal</span></h3>
             <p>
-              Are one or more domains accessible on <b>sainternet.xyz</b>, that you feel shouldn't be?
+              Are one or more domains accessible via <b>dns.sainternet.xyz</b>, that you feel shouldn't be?
             </p>
             <p>
-              Create a <a class="embiggen" href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=blacklist&template=BLACKLIST.md&title=sainternet.xyz%3A+blacklist+proposal">Blacklist Proposal</a>.
+              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=blacklist&template=BLACKLIST.md&title=sainternet.xyz%3A+blacklist+proposal">Blacklist Proposal</a>.
             </p>
            </div>
         </div>
@@ -131,10 +131,10 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Whitelist Proposal</span></h3>
             <p>
-              Are one or more domains <i>in</i>accessible on <b>sainternet.xyz</b>, that you feel <i>should</i> be?
+              Are one or more domains <i>inaccessible</i> via <b>dns.sainternet.xyz</b>, that you feel <i>should</i> be?
             </p>
             <p>
-              Create a <a class="embiggen" href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=whitelist&template=WHITELIST.md&title=sainternet.xyz%3A+whitelist+proposal">Whitelist Proposal</a>.
+              Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=whitelist&template=WHITELIST.md&title=sainternet.xyz%3A+whitelist+proposal">Whitelist Proposal</a>.
             </p>
            </div>
         </div>
