saint-lascivious.github.io: navbar stuff
Changes to be committed:
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   resources/stylesheets/sainternet.css
 - modified:   technologies.html

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
       </div>
       <div class="ribbon red-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-catchphrase">
+              <b><i>…breaking the Internet, since 2016.</i></b>
+            </div>
+          </div>
+        </div>
         <div class="sainternet-container mdl-grid" id="welcome">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
