--- a/technologies.html
+++ b/technologies.html
@@ -89,7 +89,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="/filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#aboutsainternet"><b>About Sainternet</b></a><br><a class="embiggen" href="#dnsdist">dnsdist</a>, <a class="embiggen" href="#dnsproxy">dnsproxy</a>, <a class="embiggen" href="#piholeftl">pihole-FTL</a>, <a class="embiggen" href="#unbound">unbound</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="/filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#technologies"><b>Technologies</b></a><br><a class="embiggen" href="#dnsdist">dnsdist</a>, <a class="embiggen" href="#dnsproxy">dnsproxy</a>, <a class="embiggen" href="#piholeftl">pihole-FTL</a>, <a class="embiggen" href="#unbound">unbound</a>
             </div>
           </div>
         </div>
