--- a/filtereddns.html
+++ b/filtereddns.html
@@ -104,7 +104,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#filtereddns"><b>Filtered DNS</b></a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#filtereddns"><b>Filtered DNS</b></a><br><a class="embiggen" href="/frequentlyaskedquestions.html">FAQ</a>, <a class="embiggen" href="/connecttosainternet.html">Connect to Sainternet</a>, <a class="embiggen" href="/portsandprotocols.html">Ports and Protocols</a>, <a class="embiggen" href="/technologies.html">Technologies</a>, <a class="embiggen" href="/testsainternet.html">Test Sainternet</a>, <a class="embiggen" href="/reportaproblem.html">Report a Problem</a>
             </div>
           </div>
         </div>
