saint-lascivious.github.io: assorted minor edits
Changes to be committed:
 - modified:   .github/PULL_REQUEST_TEMPLATE.md
 - modified:   .github/SECURITY.md
 - modified:   downloads/apple/sainternet-https-and-tls.mobileconfig
 - modified:   downloads/apple/sainternet-https-only.mobileconfig
 - modified:   downloads/apple/sainternet-tls-only.mobileconfig
 - modified:   filtereddns.html

--- a/filtereddns.html
+++ b/filtereddns.html
@@ -119,7 +119,7 @@
               Sainternet Filtered DNS blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
             </p>
             <p>
-              Sainternet <b>does not</b> and <b><i>will not</i></b> block domains based upon ethical, moral, personal, political or religious belief, nor upon any lack thereof.
+              Sainternet <b>does not</b> and <b><i>will not</i></b> block domains based upon race or creed, geography, ethical, moral, personal, political or religious belief, nor upon any lack or combination thereof.
             </p>
             <p>
               Notes:
@@ -128,7 +128,7 @@
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.</li>
             </ol>
             <p>
-              You can find information about the technologies powering Sainternet Filtered DNS <a href="/technologies.html">here</a>.
+              You can find information about the technologies used to power Sainternet Filtered DNS <a href="/technologies.html">here</a>.
             </p>
           </div>
         </div>
