saint-lascivious.github.io: newsandupdates, a quick stop
fix filtereddns prefetch/render for reportaproblem

Changes to be committed:
 - modified:   filtereddns.html
 - modified:   newsandupdates.html

--- a/filtereddns.html
+++ b/filtereddns.html
@@ -66,6 +66,8 @@
     <link rel="prerender" href="/technologies.html">
     <link rel="prefetch" href="/testsainternet.html" as="document">
     <link rel="prerender" href="/testsainternet.html">
+    <link rel="prefetch" href="/reportaproblem.html" as="document">
+    <link rel="prerender" href="/reportaproblem.html">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
