--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -84,7 +84,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#aquickstop">A QUICk Stop</a>, <a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
             </div>
           </div>
         </div>
@@ -95,8 +95,17 @@
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="aquickstop">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+            <h3><span class="embiggen">A QUICk Stop</span></h3>
+            <p class="embiggen" id="datetime">
+              Thursday, 21 December 2022 06:00+13:00 (NZDT)
+            </p>
             <p>
-              We shall see how things go but for the moment at least this card will remain pinned, and those below it posted in reverse chronological order with the newest post always being the second.
+              DNS resolution via QUIC legacy ports (UDP 784 and 8853) is to be suspended as of Friday, 1 January 2023 NZDT.
             </p>
            </div>
         </div>
