--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -44,13 +44,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="preconnect" href="https://code.getmdl.io">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.amber-red.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/button_home.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
+    <link rel="stylesheet" href="/resources/stylesheets/material.amber-red.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/button_home.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -233,7 +232,7 @@
       </div>
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
     <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
   </body>
 </html>
