--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="preconnect" href="https://code.getmdl.io">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="/resources/stylesheets/img.css">
-    <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
-    <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
+    <link rel="stylesheet" href="/resources/stylesheets/material.red-blue.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/img.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.min.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.min.css">
 
     <!-- Prefetch / Prerender -->
     <link rel="dns-prefetch" href="discord.gg">
@@ -168,7 +167,7 @@
         </ul>
       </div>
     </footer>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
     <script type="text/javascript" src="/resources/javascript/random_phrase.js"></script>
     <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
   </body>
