saint-lascivious.github.io: domain formatting, minify js
 - minification has made for some non-trivial bandwidth savings
   with approx. 40% reduction in .css, .js file size in total,
   indirectly leading to faster initial page load and prefetcing

 - format sainternet domains in codeblocks where appropriate

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - new file:   resources/javascript/random_phrase.min.js
 - new file:   resources/javascript/sainternet.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -114,7 +114,7 @@
               <li>Search for "Private DNS"</li>
               <li>Select "Private DNS"</li>
               <li>Select "Designated Private DNS"</li>
-              <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
               <li>Done</li>
             </ol>
            </div>
@@ -173,7 +173,7 @@
               <li>Select "Privacy and security"</li>
               <li>Select "Use secure DNS"</li>
               <li>Select "Choose another provider"</li>
-              <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
               <li>Done</li>
             </ol>
            </div>
@@ -191,7 +191,7 @@
               <li>Select "Enable DNS over HTTPS"</li>
               <li>Select "Use Provider"</li>
               <li>Select "Custom"</li>
-              <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+              <li>Enter "<code>dns.sainternet.xyz</code>"</li>
               <li>Select "OK"</li>
               <li>Done</li>
             </ol>
@@ -252,6 +252,6 @@
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
     <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
   </body>
 </html>
