--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -189,6 +189,6 @@ nslookup -type=txt 265.pokedex dns.sainternet.xyz
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
     <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
   </body>
 </html>
