--- a/reportaproblem.html
+++ b/reportaproblem.html
@@ -118,7 +118,7 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Blacklist Proposal</span></h3>
             <p>
-              Are one or more domains accessible via <b>dns.sainternet.xyz</b>, that you feel shouldn't be?
+              Are one or more domains accessible via <code>dns.sainternet.xyz</code>, that you feel shouldn't be?
             </p>
             <p>
               Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=blacklist&template=BLACKLIST.md&title=sainternet.xyz%3A+blacklist+proposal">Blacklist Proposal</a>.
@@ -130,7 +130,7 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Whitelist Proposal</span></h3>
             <p>
-              Are one or more domains <i>inaccessible</i> via <b>dns.sainternet.xyz</b>, that you feel <i>should</i> be?
+              Are one or more domains <i>inaccessible</i> via <code>dns.sainternet.xyz</code>, that you feel <i>should</i> be?
             </p>
             <p>
               Create a <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/issues/new?assignees=saint-lascivious&labels=whitelist&template=WHITELIST.md&title=sainternet.xyz%3A+whitelist+proposal">Whitelist Proposal</a>.
@@ -142,7 +142,7 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Security Disclosure</span></h3>
             <p>
-              Disclosures relating to the security (or <in>in</in>security rather) of <b>sainternet.xyz</b> can be directed in confidence to the following address:
+              Disclosures relating to the security (or <in>in</in>security rather) of <code>sainternet.xyz</code> can be directed in confidence to the following address:
             </p>
             <p>
               <a class="embiggen" href="mailto:admin@sainternet.xyz" target="_blank" rel="noopener noreferrer">admin@sainternet.xyz</a>
@@ -198,6 +198,6 @@
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
     <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
   </body>
 </html>
