--- a/technologies.html
+++ b/technologies.html
@@ -97,7 +97,7 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Technologies</span></h3>
             <p>
-              Sainternet Filtered DNS is made possible using, but neither endorsed nor condoned by, the following projects.
+              Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
             </p>
            </div>
         </div>
@@ -198,6 +198,6 @@
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
     <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
   </body>
 </html>
