--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -135,7 +135,7 @@
               Friday, 23 December 2022 01:00+13:00 (NZDT)
             </p>
             <p>
-              This is just a reminder, that issues with this site, as well as issues pertaining to <b>dns.sainternet.xyz</b> DNS resolution can be reported via the mechanisms detailed <a href="/reportaproblem.html">here</a>.
+              This is just a reminder, that issues with this site (<code>sainternet.xyz</code>, <code>www.sainternet.xyz</code>), as well as issues pertaining to DNS resolution (<code>dns.sainternet.xyz</code>) can be reported via the mechanisms detailed <a href="/reportaproblem.html">here</a>.
             </p>
             <p>
               Your input is instrumental in the improvement of these services.
@@ -233,6 +233,6 @@
     </footer>
     <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
     <script type="text/javascript" src="/resources/javascript/material.min.js"></script>
-    <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="/resources/javascript/sainternet.min.js"></script>
   </body>
 </html>
