--- a/projects.html
+++ b/projects.html
@@ -1,19 +1,8 @@
 <!doctype html>
 <!--
   sainternet.xyz - projects.html
-  Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      https://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License
+  license Apache-2.0
+  copyright 2022 saint-lascivious
 -->
 <html lang="en-NZ">
   <head>
@@ -24,22 +13,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256x256.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
     <link rel="icon" sizes="any" href="/favicon.ico">
 
-    <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/projects.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
-    <!-- Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
